--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@ body:after {
     z-index: 0;
 }
 
-@media screen and (orientation: landscape){
-    html {
-        -webkit-transform: translateY(-100%) rotate(90deg);    
-        transform: translateY(-100%) rotate(90deg);
-        -webkit-transform-origin: left bottom;    
-        transform-origin: left bottom;    
+@media (orientation: landscape) {
+    body {
+      -webkit-transform: rotate(-90deg);
+      -moz-transform: rotate(-90deg);
+      -o-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+      transform: rotate(-90deg);
     }
-}
 
 h1 {
     color: white;
