--- a/menu.css
+++ b/menu.css
@@ -1,11 +1,16 @@
+.back-link {
+    position: absolute !important;
+    left: 25px !important;
+    top: 25px !important;
+    z-index: 500 !important;
+    color: white !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif !important;
+    text-decoration: none;
+}
+
 .back-button {
-    position: absolute;
-    left: 25px;
-    top: 25px;
-    z-index: 500;
-    color: white;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    padding: 8px 20px;
-    border-radius: 20px;
-    border: 1px solid white;
+    padding: 8px 20px !important;
+    border-radius: 20px !important;
+    border: 1px solid white !important;
+    text-decoration: none;
 }
