--- a/style.css
+++ b/style.css
@@ -6,19 +6,8 @@ body {
     background-color: #130A58;
     background-size: cover;
     background-position: center;
-    background-image: url('assets/diagnols.png');
+    background-image: url('assets/graffiti.jpg');
     height: 100vh;
-}
-
-body:after {
-    content: '';
-    height: 100%;
-    opacity: .4;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 100%;
-    z-index: 0;
 }
 
 h1 {
@@ -70,9 +59,9 @@ h1 {
 .pod__industry {
     color: #130A59;
     font-family: 'Open-Sans', arial, sans-serif;
-    font-size: 24px;
+    font-size: 26px;
     font-weight: 600;
-    line-height: 1.4;
+    line-height: 1.3;
     margin: 0 40px;
 
 }
@@ -87,7 +76,7 @@ h1 {
     display: flex;
     flex-basis: calc(50% - 50px);
     flex-direction: column;
-    height: 120px;
+    height: 170px;
     justify-content: center;
     text-decoration: none;
     text-align: center;
