--- a/video.css
+++ b/video.css
@@ -4,7 +4,7 @@ body {
     background-color: #130A58;
     background-size: cover;
     background-position: center;
-    background-image: url('assets/diagnols.png');
+    background-image: url('assets/graffiti.jpg');
     height: 100vh;
     display: flex;
     flex-direction: column;
