--- a/video.css
+++ b/video.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: #130A58;
-    background-size: cover;
+    background-size: 102%;
     background-position: center;
     background-image: url('assets/graffiti.jpg');
     height: 100vh;
