--- a/menu.css
+++ b/menu.css
@@ -5,12 +5,15 @@
     z-index: 500 !important;
     color: white !important;
     font-family: 'Open Sans', Arial, Helvetica, sans-serif !important;
+    font-size: 24px !important;
+    font-weight: 600;
+    line-height: 1.5 !important;
     text-decoration: none;
 }
 
 .back-button {
-    padding: 8px 20px !important;
+    padding: 8px 25px !important;
     border-radius: 20px !important;
-    border: 1px solid white !important;
+    border: 2px solid white !important;
     text-decoration: none;
 }
